# openair4G-mirror

./: README.txt  maketags  oaienv  svn-commit.tmp
branches/carrier_aggregation/openair1/: Makefile  README.TXT
branches/carrier_aggregation/openair3/PMIP6D/pmipv6-daemon-umip-0.4/src/: Makefile.am
branches/carrier_aggregation/openair3/PMIP6D/pmipv6-daemon-umip-0.4/src/pmip/: pmip_handler.c
branches/carrier_aggregation/openair3/PMIP6D/pmipv6-daemon-umip-0.4/src/pmip/docs/html/html/: functions_vars.html  pmip__lma__proc_8h.html  pmip__msgs_8h_source.html
branches/conectrelay/: maketags
branches/lolamesh/: maketags
openair-cn/NAS/: nas_itti_messaging.c
openair-cn/SCTP/: sctp_eNB_task.c
openair1/: Makefile  README.TXT
openair1/MAC_INTERFACE/: defs.h  extern.h  init.c  vars.h
openair1/PHY/: Makefile.inc  defs.h  extern.h  impl_defs.h  impl_defs_lte.h  impl_defs_top.h  spec_defs_top.h  types.h  vars.h
openair1/SCHED/: Makefile.inc  defs.h  extern.h  phy_procedures_emos.h  phy_procedures_lte_calibration.c  phy_procedures_lte_common.c  phy_procedures_lte_eNb.c  phy_procedures_lte_ue.c  pucch_pc.c  pusch_pc.c  sched_dlsch.c  sched_lte.c  sched_lte_fw2011.c  sched_lte_user.c  vars.h
openair1/SIMULATION/: Makefile.inc
openair2/: Makefile
openair2/COMMON/: mac_messages_types.h  mac_rlc_primitives.h  mac_rrc_primitives.h  openair_types.h  platform_constants.h  ral_messages_types.h  rrm_constants.h
openair2/LAYER2/: Makefile  Makefile.inc
openair2/PHY_INTERFACE/: defs.h  extern.h  vars.h
openair2/RRM_4_RRC_LITE/: Makefile.objs
openair2/SIMULATION/: config_proto.h  openair_config.cfg  openair_configure.c  openair_readconfigfile.c  openair_scenario.scn  openair_topology1.top  phy_defs.h  phy_extern.h  phy_vars.h  simulation_defs.h
openair2/UTIL/: Makefile.inc
openair3/OPENAIRMME/: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
openair3/OPENAIRMME/GTPV1-U/: Makefile.am  gtpv1_u.h  gtpv1_u_api.h  gtpv1_u_message_rx.c  gtpv1_u_message_tx.c
openair3/PMIP6D/: CHANGELOG  INSTALL  INSTALL.kernel  Makefile  README.first  VERSION  ncc.i  pmip6d.c  pmip6d.h  pmip_cache.c  pmip_cache.h  pmip_dereg.c  pmip_dereg.h  pmip_dummy.h  pmip_extern.h  pmip_fsm.c  pmip_fsm.h  pmip_hnp_cache.h  pmip_lma_proc.c  pmip_lma_proc.h  pmip_pcap.c  pmip_radius.c  pmip_radius.h  pmip_tunnel.c  pmip_types.h
openair3/PMIPv6/: CHANGELOG
openair_lte/openair1/: Makefile  start_eNb.sh  start_eNb_mode1.sh  start_eNb_mode2.sh  start_eNb_mode6.sh  start_emos.sh  start_ue.sh  txcal800_eNB.txt  xio_script.sh
openair_lte/openair1_multi_eNb_UE/: Makefile  README.TXT  start_eNb_mode2.sh  start_emos.sh  xio_script.sh
openair_lte/openair3/: chorist.kdevelop  pmip_dummy.c  pmip_msgs.c
openair_lte/targets/: Makefile  README.txt  Simulation.txt
tags/medieval-testbench/: maketags
targets/: README.txt
targets/DOCS/: Doxyfile
targets/RTAI/: Makefile
targets/SCRIPTS/: install_asn1.sh  msc_gen.py
trunk/db/: uuid
trunk/openair1/: Makefile
trunk/openair2/: Makefile
trunk/openair3/OPENAIRMME/INTERTASK_INTERFACE/: Makefile.am  Makefile.in  gtpv1_u_messages_types.h  intertask_interface.c  intertask_interface.h  s1ap_messages_def.h  sctp_messages_def.h  sctp_messages_id.h  timer_messages_types.h  udp_messages_def.h  udp_messages_types.h
trunk/openairITS/: ieee80211p_compile_modules.sh  ieee80211p_setup_vars.sh
trunk/targets/: Makefile  README.txt
(+9017 files in other folders)
